--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <a href="mailto:jorgeimezat@gmail.com">
           <i class="icon fas fa-envelope fa-2x"></i>
         </a>
-        <a href="path_to_file" download="">
+        <a href="https://www.linkedin.com/in/jomezat/overlay/1635497005848/single-media-viewer/" download="">
           <i class="icon fas fa-solid fa-copy fa-2x"></i>
         </a>
-        <a href="https://github.com">
+        <a href="https://github.com/jomeza0">
           <i class="icon fab fa-github fa-2x"></i>
         </a>
       </div>
